# fc_token

./: AGENTS.md  README.md  appimage-builder.yml  installer.py  pyproject.toml
src/fc_token/: __init__.py  app.py  cache.py  config.py  desktop_entry.py  icons.py  installer.py  models.py  scraper.py
src/fc_token/resources/: uglyegg.png.org
src/fc_token/ui/: application.py  devtools.py  main_window.py  tray.py  utils.py  workers.py
src/fc_token/ui/dialogs/: __init__.py  about.py  future_codes.py  refresh_interval.py  settings.py  timezone.py
tests/: __init__.py  test_cache.py  test_cli.py  test_models.py  test_scraper.py
